ghc-6.2/hslibs/win32/Win32Key_stub_ffi.h

#include <windows.h>
#include "win32debug.h"
#include "errors.h"
#include "HsFFI.h"
extern DWORD prim_vK_LBUTTON();
extern DWORD prim_vK_RBUTTON();
extern DWORD prim_vK_CANCEL();
extern DWORD prim_vK_MBUTTON();
extern DWORD prim_vK_BACK();
extern DWORD prim_vK_TAB();
extern DWORD prim_vK_CLEAR();
extern DWORD prim_vK_RETURN();
extern DWORD prim_vK_SHIFT();
extern DWORD prim_vK_CONTROL();
extern DWORD prim_vK_MENU();
extern DWORD prim_vK_PAUSE();
extern DWORD prim_vK_CAPITAL();
extern DWORD prim_vK_ESCAPE();
extern DWORD prim_vK_SPACE();
extern DWORD prim_vK_PRIOR();
extern DWORD prim_vK_NEXT();
extern DWORD prim_vK_END();
extern DWORD prim_vK_HOME();
extern DWORD prim_vK_LEFT();
extern DWORD prim_vK_UP();
extern DWORD prim_vK_RIGHT();
extern DWORD prim_vK_DOWN();
extern DWORD prim_vK_SELECT();
extern DWORD prim_vK_EXECUTE();
extern DWORD prim_vK_SNAPSHOT();
extern DWORD prim_vK_INSERT();
extern DWORD prim_vK_DELETE();
extern DWORD prim_vK_HELP();
extern DWORD prim_vK_NUMPAD0();
extern DWORD prim_vK_NUMPAD1();
extern DWORD prim_vK_NUMPAD2();
extern DWORD prim_vK_NUMPAD3();
extern DWORD prim_vK_NUMPAD4();
extern DWORD prim_vK_NUMPAD5();
extern DWORD prim_vK_NUMPAD6();
extern DWORD prim_vK_NUMPAD7();
extern DWORD prim_vK_NUMPAD8();
extern DWORD prim_vK_NUMPAD9();
extern DWORD prim_vK_MULTIPLY();
extern DWORD prim_vK_ADD();
extern DWORD prim_vK_SEPARATOR();
extern DWORD prim_vK_SUBTRACT();
extern DWORD prim_vK_DECIMAL();
extern DWORD prim_vK_DIVIDE();
extern DWORD prim_vK_F1();
extern DWORD prim_vK_F2();
extern DWORD prim_vK_F3();
extern DWORD prim_vK_F4();
extern DWORD prim_vK_F5();
extern DWORD prim_vK_F6();
extern DWORD prim_vK_F7();
extern DWORD prim_vK_F8();
extern DWORD prim_vK_F9();
extern DWORD prim_vK_F10();
extern DWORD prim_vK_F11();
extern DWORD prim_vK_F12();
extern DWORD prim_vK_F13();
extern DWORD prim_vK_F14();
extern DWORD prim_vK_F15();
extern DWORD prim_vK_F16();
extern DWORD prim_vK_F17();
extern DWORD prim_vK_F18();
extern DWORD prim_vK_F19();
extern DWORD prim_vK_F20();
extern DWORD prim_vK_F21();
extern DWORD prim_vK_F22();
extern DWORD prim_vK_F23();
extern DWORD prim_vK_F24();
extern DWORD prim_vK_NUMLOCK();
extern DWORD prim_vK_SCROLL();
extern int prim_enableWindow(HWND arg1,int arg2);
extern HWND prim_getActiveWindow();
extern WORD prim_getAsyncKeyState(int arg1);
extern HWND prim_getFocus();
extern UINT prim_getKBCodePage();
extern int prim_isWindowEnabled(HWND arg1);
extern WORD prim_lOWORD(DWORD arg1);
extern WORD prim_hIWORD(DWORD arg1);